Characters table, film title styling

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,4 @@
 .App {
   text-align: center;
-}
-
-#header {
-  font-family: Impact, 'Arial Narrow Bold', sans-serif;
-  color: black;
-  -webkit-text-stroke: 2px yellow;
+  color: white;
 }
